fixed blurring

--- a/src/app/components/cards/SpiritCard.module.css
+++ b/src/app/components/cards/SpiritCard.module.css
@@ -12,7 +12,7 @@
 }
 
 .container:hover {
-  box-shadow: 5px 10px 5px 0px rgba(179, 179, 179, 1);
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.5);
 }
 
 .wrapper {
